--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,11 @@ body {
   border-radius: 10px;
 }
 
+.h1_dream{
+  color: #b1a2b8;
+  margin-bottom: 10px;
+}
+
 main {
   padding: 20px 20px 120px 20px;
 
